<?xml version="1.0" encoding="utf-8"?>
<!-- Start Screen -->
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/start_scree"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:clipToOutline="true"
    android:background="@drawable/start_screen"
    >
    <!-- ПластоваПроба -->
    <TextView
        android:id="@+id/app_name"
        android:layout_width="155dp"
        android:layout_height="24dp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="16dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="10dp"
        android:text="@string/app_name"
        android:textAppearance="@style/app_name"
        android:gravity="center_vertical"
        />
    <TextView
        android:id="@+id/registration"
        android:layout_width="71dp"
        android:layout_height="15dp"
        android:layout_alignParentRight="true"
        android:layout_marginRight="16dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="14dp"
        android:text="@string/registration"
        android:textAppearance="@style/registration"
        android:gravity="right|top"
        />
    <TextView
        android:id="@+id/hello_text"
        android:layout_width="343dp"
        android:layout_height="88dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="16dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="313dp"
        android:text="@string/hello_text"
        android:textAppearance="@style/hello_text"
        android:gravity="top"
        />
    <TextView
        android:id="@+id/hello_text_green"
        android:layout_width="343dp"
        android:layout_height="88dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="16dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="360dp"
        android:text="@string/hello_text_green"
        android:textAppearance="@style/hello_text_green"
        android:gravity="top"
        />
    <TextView
        android:id="@+id/hello_text1"
        android:layout_width="343dp"
        android:layout_height="34dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="16dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="417dp"
        android:text="@string/hello_text1"
        android:textAppearance="@style/main_text"
        android:gravity="top"
        />

    <TextView
        android:id="@+id/already_has_profile"
        android:layout_width="343dp"
        android:layout_height="34dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="655dp"
        android:gravity="top"
        android:text="@string/text_already_has_profile"
        android:textAppearance="@style/main_text" />

    <TextView
        android:id="@+id/text_login"
        android:layout_width="60dp"
        android:layout_height="34dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginRight="150dp"
        android:layout_marginTop="655dp"
        android:gravity="top"
        android:text="Увійти"
        android:textAppearance="@style/main_text"
        android:textColor="#007932"
        />

    <View
        android:id="@+id/button_1"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:layout_alignTop="@+id/hello_text1"
        android:layout_marginTop="70dp"
        android:background="@drawable/button_1"
        />

    <TextView
        android:id="@+id/some_id"
        android:layout_width="127dp"
        android:layout_height="20dp"
        android:layout_alignTop="@+id/button_1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="12dp"
        android:text="@string/button_1"
        android:textSize="16sp"
        android:textColor="#FFFFFF"
        android:fontFamily="@font/montserrat"
        android:textAlignment="center"
        android:gravity="center_horizontal|top" />

</RelativeLayout>
